[package]
name = "wot-discovery"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Web of Things (WoT) Discovery"
repository = "https://github.com/sifis-home/wot-discovery"
keywords = ["wot", "WebofThings"]

[dependencies]
serde_json = "1.0"
mdns-sd = "0.7.3"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
wot-td = "0.3.1"
futures-core = "0.3"
futures-util = "0.3.21"
tracing = "0.1.35"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.11"
wot-serve = "0.3.1"
