[package]
name = "wot-discovery"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Web of Things (WoT) Discovery"
repository = "https://github.com/sifis-home/wot-discovery"
keywords = ["wot", "WebofThings"]

[dependencies]
serde_json = "1.0"
mdns-sd = "0.13.1"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
wot-td = "0.6.2"
futures-core = "0.3"
futures-util = "0.3.21"
tracing = "0.1.35"

[dev-dependencies]
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
wot-serve = "0.4"
